# RGS_2025

./: README.md  main.py  preprocess.ipynb  pyproject.toml
Team_7/: requirements.txt
