[project]
name = "rgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gseapy>=1.1.10",
    "ipykernel>=6.30.1",
    "liana>=1.5.1",
    "notebook>=7.4.6",
    "numpy>=2.3.3",
    "omnipath>=1.0.12",
    "pandas>=2.3.2",
    "scanpy>=1.11.4",
]
